--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "chart.js": "^3.7.1",
     "dayjs": "^1.11.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
