--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-select": "^5.2.2",
     "tiny-invariant": "^1.2.0",
     "typescript": "^4.6.2",
+    "underscore": "^1.13.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@types/underscore": "^1.11.4",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23"
