--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "CYPRESS_TEST_DATE=2022-04-27 cypress open",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -51,6 +51,7 @@
   "devDependencies": {
     "@types/underscore": "^1.11.4",
     "autoprefixer": "^10.4.4",
+    "cypress": "^9.6.0",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23"
   }
