--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-chartjs-2": "^4.0.1",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-ga4": "^1.4.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
